--- a/app/views/startup/user.html.erb
+++ b/app/views/startup/user.html.erb
@@ -1,5 +1,8 @@
 <p>AVI FOODSYSTEMS INC.   Fresh Food Ordering</p>
-<p>Login view</p>
+<p>User view</p>
+
+
+<%= render html: params.inspect %>
 
 
 <%=link_to "Back", root_path %>
