--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,5 +1,5 @@
-<p>AVI FOODSYSTEMS INC.   Fresh Food Ordering</p>
-<p>User view</p>
+<p><strong>AVI FOODSYSTEMS INC.   Fresh Food Ordering</strong></p>
+<p>Available Stores for: <%=params[:u] %></p>
 
 <table>
   
