--- a/app/views/startup/index.html.erb
+++ b/app/views/startup/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/header' %>
-<h2>Login:</h2>
+<p style="font-size:large; font-weight:bold; padding:0px;">Login:</p>
 
 
 <%= form_tag("/startup/login", method: "get") do %>
