--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,20 @@
-<h1><%= image_tag("avi_logo.jpg", alt: "avi logo", height: "35", width: "45") %>
-    AVI FOODSYSTEMS INC.   Fresh Food Ordering |  
-    <%=link_to "Logout", root_path, :method => :get %></h1>
+<style>
+    .tx {text-align: center;}
+    .tr{border-collapse:collapse; padding:0px;}
+    .tc1{width:2%; text-align:left;}
+    .tc2{width:10%; font-weight:bold; font-size:xx-large;}
+    .tc3{width:5%; font-size:x-large;}    
+</style>
+
+
+<table class="tx">
+    <tr class="tr">
+        <td class="tc1"><%= image_tag("AVI_Logo.jpg", alt: "avi logo", height: "60", width: "125") %></td>
+        <td class="tc2">Market C Fresh Food Ordering</td>
+        <td class="tc3"><%=link_to "Logout", root_path, :method => :get %></td>
+    </tr>
+</table>
+   
 
 <% if flash[:notice] %>
   <p class="p_alert1"><%= flash[:notice] %></p>
