--- a/app/views/startup/index.html.erb
+++ b/app/views/startup/index.html.erb
@@ -31,9 +31,14 @@
         <td><p style="color:red"> <%=params[:msg]%> </p></td>
     </tr>
     </table
+
+<br>
+
+
+<%=link_to "TEST",{controller:"test_controller",action:"test"}, {method:"get"} %>
+
    
-    
-    
+
 <% end %>
 
 
