--- a/app/views/cscorder/create.html.erb
+++ b/app/views/cscorder/create.html.erb
@@ -15,12 +15,13 @@
 
 <p class="storename">Store: <%= session[:storeid]%> <%= session[:storename] %></p>
 
+
 <!--Actions bar -->
 <table class="table_actionbar">
   <tr>
     <td style="width:33%"><strong>Actions:</strong></td>
-    <td style="width:33%"><%= button_to "Back", {controller:"user", action:"show"}, {params: {id: params[:id],storeid: session[:storeid],storename: session[:storename]}, :method => :get, style: "width:100%"} %></td>
-    <td style="width:33%"><%= button_to "Submit", {controller:"cscorder", action:"update"}, {params: {id: params[:id],storeid: session[:storeid],storename: session[:storename]}, :method => :put, :disabled => @flg, style: "width:100%"}%></td>
+    <td style="width:33%"><%= button_to "Back", user_path(params[:id]), {params: {id: params[:id],storeid: session[:storeid],storename: session[:storename]}, :method => :get, style: "width:100%"} %></td>
+    <td style="width:33%"><%= button_to "Submit", {controller:"cscorder", action:"update", id: params[:id]}, {params: {id: params[:id],storeid: session[:storeid],storename: session[:storename]}, :method => :put, :disabled => @flg, style: "width:100%"}%></td>
    </tr>
 </table>
 
@@ -44,10 +45,10 @@
 </table>
 
 
-    <!-- Menu items -->
+<!-- Menu items -->
+       
     <table class="table2">
-        
-        <tr class="tableheader1">
+       <tr class="tableheader1">
             <th style="width:23%">Category</th>
             <th style="width:10%,">Item</th>
             <th style="width:25%">Description</th>
@@ -61,31 +62,32 @@
             <th style="width:5%">Change To</th>
             <th style="width:0%"></th>
         </tr>  
-    
+        
+       
         <% @t.each do |tbl| %>
-            <tr>
-                <td><%= tbl.category %></td>
-                <td><%= tbl.itemnmbr %></td>
-                <td><%= tbl.itemdesc %></td>
-                <td><%= number_with_precision(tbl.selprc,precision:2) %></td>
-                <td><%= tbl.uofm %></td>
-                <td><%= tbl.h_ord %></td>
-                <td><%= tbl.h_avgord %></td>
-                <td><%= tbl.h_avgwst %></td>
-                <td><%= tbl.h_sugord %></td>
-                <td><%= tbl.qtyord %></td>
-                <div id="fx">
-                    <td><%= text_field_tag(:amount,nil,{size: 3, maxlength: 3}) %></td>
-                </div>    
-                <td><%= button_to "Change",{controller:"cscorderli", action:"edit"},params:{itemnmbr: tbl.itemnmbr, pk: tbl.id, qtynew2: "amount"},:method => :get, :disabled => @flg %></td>
-                <td><%= hidden_field_tag("pk",tbl.id,) %></td>
-            </tr>
+            
+            <%= form_tag({controller:"cscorderli", action:"update", id: tbl.id}, {method:"put",}) do %>
+                <tr>
+                    <td><%= tbl.category %></td>
+                    <td><%= tbl.itemnmbr %></td>
+                    <td><%= tbl.itemdesc %></td>
+                    <td><%= number_with_precision(tbl.selprc,precision:2) %></td>
+                    <td><%= tbl.uofm %></td>
+                    <td><%= tbl.h_ord %></td>
+                    <td><%= tbl.h_avgord %></td>
+                    <td><%= tbl.h_avgwst %></td>
+                    <td><%= tbl.h_sugord %></td>
+                    <td><%= tbl.qtyord %></td>
+                    <td><%= text_field_tag('newqty',nil,{size: 3, maxlength: 3}) %></td>
+                    <td><%= submit_tag("Change") %></td>
+                    <td><%= hidden_field_tag("pk",tbl.id,) %></td>
+                    <td><%= hidden_field_tag("cscorder_id",tbl.cscorder_id,) %></td>
+                </tr>
+            <% end %>
+        
         <% end %>
 
 </table>
-
-
-
 
 
 
