--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 <table class="tx">
     <tr class="tr">
         <td class="tc1"><%= image_tag("AVI_Logo.jpg", alt: "avi logo", height: "60", width: "125") %></td>
-        <td class="tc2">Market C Fresh Food Ordering</td>
+        <td class="tc2">Fresh at Hand Recipe Viewer</td>
         <td class="tc3"><%=link_to "Logout", root_path, :method => :get %></td>
     </tr>
 </table>
