--- a/app/views/recipe/index.html.erb
+++ b/app/views/recipe/index.html.erb
@@ -14,8 +14,8 @@
     <th>DESCRIPTION</th>
     <th></th>
     <th></th>
-    <th></th>
-    <th></th>
+    <th>tst</th>
+    <th>tst</th>
   </tr>
   
   <% @t.each do |tbl| %>
