--- a/app/views/recipe/index.html.erb
+++ b/app/views/recipe/index.html.erb
@@ -1,31 +1,31 @@
 <%= render 'layouts/header' %>
+<%= render 'layouts/header_userinfo' %>
 
 <table class="table2">
-  
+  <col style="width:30%">
   <col style="width:10%">
   <col style="width:50%">
-  <col style="width:10%">
-  <col style="width:10%">
-  <col style="width:10%">
-  <col style="width:10%">
+  <col style="width:5%">
+  <col style="width:5%">
+  <col style="width:5%">
   
   <tr class="tableheader1">
-    <th>ID</th>
+    <th>CATEGORY</th>
+    <th>RECIPE</th>
     <th>DESCRIPTION</th>
     <th></th>
     <th></th>
-    <th>tst</th>
-    <th>tst</th>
+    <th></th>
   </tr>
   
   <% @t.each do |tbl| %>
     <tr>
+      <td><%=tbl.catid %></td>
       <td><%=tbl.rid %></td>
       <td><%=tbl.rid_desc %></td>
-      <td><%= button_to 'Print Labels', recipe_path(id: tbl.rid)  %></td>
-      <td><%= button_to 'Nutritionals', recipe_path(id: tbl.rid)  %></td>
-      <td><%= button_to 'Procedure', recipe_path(id: tbl.rid)  %></td>
-      <td><%= button_to 'Other', recipe_path(id: tbl.rid)  %></td>
+      <td><%= button_to 'Print Labels', recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 1}}  %></td>
+      <td><%= button_to 'Recipe',recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 2}}  %></td>
+      <td><%= button_to 'Nutritionals', recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 3}}  %></td>
     </tr>
   <% end %>
   
