--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,8 @@
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    font-size: 16px;
+    font-size: 12px;
+    padding: 0px; 
     }
 
 .table2 td{
@@ -60,22 +61,11 @@
     text-align: left;
     padding: 8px;        
     }           
+    
+    .table2 tr:nth-child(even){background-color: #f2f2f2;}
 
+    .table2 tr:hover {background-color: #f5cba7;}
 
-.table3{
-    font-family: arial, sans-serif;
-    font-weight: bold;
-    width: 80%;   
-    text-align: left;
-    padding: 5px;
-    }        
-
-.table3 tr{
-    border: none;
-    text-align: left;
-    padding: 5px;
-    height: 1px;
-    }           
 
 
 .tableheader1 th{
@@ -83,15 +73,23 @@
     background-color: black;
     color: white;
     text-align: left;
-    height: 40px;
+    height:30px;
     }
 
-.table_actionbar{
-    font-family: arial, sans-serif;
-    width: 30%;   
-    border: 3px solid #dddddd;
-    border-color: blue;
+.sectionheader {
+    border-collapse:collapse;
+    padding:0px;
+    background-color: white;
+    color: blue;
     text-align: left;
-    padding: 5px;
-    }        
-
+    height: 15px;
+    font-weight: bold;
+    font-size:large
+    }    
+    
+.btn_med {
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+    font-size:large
+    }     
