--- a/app/views/layouts/_header_recipe.html.erb
+++ b/app/views/layouts/_header_recipe.html.erb
@@ -22,7 +22,7 @@
     <tr class="recipeheader">
       <td style="text-align:left;width:15%">Recipe: <%=tbl.rid %></td>
       <td style="text-align:center;width:50%"><%=tbl.rid_desc %></td>
-      <td style="text-align:right;width:30%">Suggested Sell Price: <%=tbl.sel_prc %></td>
+      <td style="text-align:right;width:30%">Suggested Sell Price: $ <%=tbl.sel_prc %></td>
     </tr>
   <% end %>
 </table>
