--- a/app/views/recipe/show1.html.erb
+++ b/app/views/recipe/show1.html.erb
@@ -49,8 +49,7 @@
 <!-- render partials -->
 <%= render 'layouts/header2' %>
 <%= render 'layouts/header_recipe' %>
-
-<p>Error:<%= params[:emsg] %></p>
+<%= render 'layouts/display_errors' %>
 
 
 <!-- misc text -->
@@ -60,24 +59,22 @@
 <p></p>
 
 <!-- Begin Form tag group -->
-<%= form_tag recipe_path,:method => "put" do %>
+<%= form_tag recipe_path, method: 'put' do %>
 
 
-    <!-- set hidden fields, these are needed for controler#actio [params] -->
-    <% @t.each do |tbl| %>
+    <!-- set hidden fields, these are needed for controler#action [params] -->
+    <% @t2.each do |tbl| %>
          <%= hidden_field_tag("rid",tbl.rid) %>
-         <%= hidden_field_tag("scancode",tbl.scan_code) %>
-    <% end %>
     
-    <!-- # COPIES/Print -->
-    <table id="t2">
-        <tr>
-            <td><p>Copies:</p></td>
-            <td><%= text_field_tag("copies","1",{maxlength:2, size:5}) %></td>
-            <td><%= submit_tag("Print", :class => "btn_med") %></td></td>
-        </tr>
-    </table>
-
+        <!-- # COPIES/Print -->
+        <table id="t2">
+            <tr>
+                <td><p class="p1">Copies:</p></td>
+                <td><%= text_field_tag("copies",1,{maxlength:2, size:5,class:'p1'}) %></td>
+                <td><%= submit_tag("Print", class: 'btn_med') %></td></td>
+            </tr>
+        </table>
+    <% end %>
 
     <!-- fill form with editable settings -->
     <table id="t1">  
@@ -90,92 +87,92 @@
           <th>Use for Label</th>
       </tr>    
         
-      <% @t.each do |tbl| %>
+      <% @t2.each do |tbl| %>
         
         <tr>
             <td>Label Name</td>
-            <td><%= tbl.rid_desc %></td>
-            <td><%= text_field_tag("lblname",tbl.rid_desc,{maxlength:25, size:25}) %></td> 
+            <td><%= tbl.label_name %></td>
+            <td><%= text_field_tag("label_name2",tbl.label_name2,{maxlength:25, size:25}) %></td> 
         </tr>
         
         <tr>
             <td>UPC / Scan Code</td>
             <td><%= tbl.scan_code %></td>
-            <td><%= tbl.scan_code %></td>
+            <td><%= tbl.scan_code2 %></td>
         </tr>
         
+        
         <tr>
-            <td>Recommended Selling Price</td>
+            <td>Recommended Selling Price $</td>
             <td><%= tbl.sel_prc %></td>
-            <td><%= text_field_tag("selprc",tbl.sel_prc,{maxlength:25, size:25}) %></td> 
+            <td><%= text_field_tag("sel_prc2",tbl.sel_prc2,{maxlength:25, size:25}) %></td> 
         </tr>
       
         <tr>
             <td>Half Portion</td>
             <td>No</td>
-            <td><%= select_tag("halfportion",options_for_select(["No","Yes"],"No")) %></td> 
+            <td><%= select_tag("half_port2",options_for_select(["No","Yes"],"No")) %></td> 
         </tr>
         
         <tr>
             <td>Special Notes</td>
             <td></td>
-            <td><%= text_field_tag("snotes",nil,{maxlength:25, size:25}) %></td> 
+            <td><%= text_field_tag("special_notes2",nil,{maxlength:25, size:25}) %></td> 
         </tr>   
         
         <tr>
             <td>Allergen-Egg</td>
             <td><%= tbl.alg_egg %></td>
-            <td><%= select_tag("aegg",options_for_select(["","Y"],tbl.alg_egg)) %></td> 
+            <td><%= select_tag("alg_egg2",options_for_select(["","Y"],tbl.alg_egg2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-ShellFish</td>
             <td><%= tbl.alg_shellfish %></td>
-            <td><%= select_tag("ashellfish",options_for_select(["","Y"],tbl.alg_shellfish)) %></td> 
+            <td><%= select_tag("alg_shellfish2",options_for_select(["","Y"],tbl.alg_shellfish2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Fish</td>
             <td><%= tbl.alg_fish %></td>
-            <td><%= select_tag("afish",options_for_select(["","Y"],tbl.alg_fish)) %></td> 
+            <td><%= select_tag("alg_fish2",options_for_select(["","Y"],tbl.alg_fish2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Soy</td>
             <td><%= tbl.alg_soy %></td>
-            <td><%= select_tag("asoy",options_for_select(["","Y"],tbl.alg_soy)) %></td> 
+            <td><%= select_tag("alg_soy2",options_for_select(["","Y"],tbl.alg_soy2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Milk</td>
             <td><%= tbl.alg_milk %></td>
-            <td><%= select_tag("amilk",options_for_select(["","Y"],tbl.alg_milk)) %></td> 
+            <td><%= select_tag("alg_milk2",options_for_select(["","Y"],tbl.alg_milk2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Tree Nuts</td>
             <td><%= tbl.alg_treenuts %></td>
-            <td><%= select_tag("atreenuts",options_for_select(["","Y"],tbl.alg_treenuts)) %></td> 
+            <td><%= select_tag("alg_treenuts2",options_for_select(["","Y"],tbl.alg_treenuts2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Peanuts</td>
             <td><%= tbl.alg_peanuts %></td>
-            <td><%= select_tag("apeanuts",options_for_select(["","Y"],tbl.alg_peanuts)) %></td> 
+            <td><%= select_tag("alag_peanuts2",options_for_select(["","Y"],tbl.alg_peanuts2)) %></td> 
         </tr>
         
         <tr>
             <td>Allergen-Wheat</td>
             <td><%= tbl.alg_wheat %></td>
-            <td><%= select_tag("awheat",options_for_select(["","Y"],tbl.alg_wheat)) %></td> 
+            <td><%= select_tag("alg-wheat2",options_for_select(["","Y"],tbl.alg_wheat2)) %></td> 
         </tr>
         
         <tr>
             <td>Ingredients</td>
             <td><%= tbl.ingredient_list %></td>
-            <td><%= text_area_tag("ingrlist",tbl.ingredient_list,size: "25x15") %></td> 
+            <td><%= text_area_tag("ingredient_list2",tbl.ingredient_list2,size: "25x15") %></td> 
         </tr>
-        
         
       <% end %>
     
