--- a/app/views/layouts/_header_recipe.html.erb
+++ b/app/views/layouts/_header_recipe.html.erb
@@ -17,7 +17,7 @@
     }
 </style>
 
-<% @t.each do |tbl| %>
+<% @t_recipe.each do |tbl| %>
   <table class="table">
     <tr class="recipeheader">
       <td style="text-align:left;width:15%">Recipe: <%=tbl.rid %></td>
