--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,3 +99,10 @@
     font-weight: bold;
     font-size:large
     }     
+
+.btn_med_w {
+    width: 150px;
+    height: 40px;
+    font-weight: bold;
+    font-size:large
+    }     
