--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,14 +1,14 @@
-<%= render 'layouts/header' %>
-<%= render 'layouts/header_userinfo' %>
+<%= render 'layouts/header_admin' %>
 
 
 <!--  dropdown for categories -->
-<table class="border1"; width="45%">
+<table width="55%">
   <tr>
-    <%= form_tag(recipe_index_path, method: 'get') do %>
+    <%= form_tag(admin_index_path, method: 'get') do %>
       <td><p class='p1'>Category: <%= select_tag("category",options_from_collection_for_select(@category,'category_name','category_name',@category_def), :class => 'p1') %></p> </td>
       <td><%= submit_tag 'Refresh',class: 'btn_med'  %></td>
-    <% end %>
+     <% end %>
+      <td><%= button_to('New Recipe',new_recipe_path,{method:'get',class:'btn_med_w'})%></td>
   </tr>  
 </table>
 
@@ -35,9 +35,9 @@
       <td><%=tbl.catid %></td>
       <td><%=tbl.rid %></td>
       <td><%=tbl.rid_desc %></td>
-      <td><%= button_to 'Print Labels', recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 1}}  %></td>
-      <td><%= button_to 'Recipe',recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 2}}  %></td>
-      <td><%= button_to 'Nutritionals', recipe_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 3}}  %></td>
+      <td><%= button_to 'Edit Recipe Data',admin_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 1}}  %></td>
+      <td><%= button_to 'Edit Ingredients',admin_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 2}}  %></td>
+      <td><%= button_to 'Edit Procedure',admin_path(id:0),{method:"get",params:{rid: tbl.rid,typ: 3}}  %></td>
     </tr>
   <% end %>
   
